fixes body margin so there are no scrollbar in iframe

--- a/src/wireframe.css
+++ b/src/wireframe.css
@@ -18,7 +18,7 @@ aside,
 header,
 footer,
 main {
-  margin: 5px !important;
+  margin: 0 !important;
   display: flex;
   flex-direction: column;
   align-items: center;
